--- a/resources/public/md/description
+++ b/resources/public/md/description
@@ -1,1 +1,3 @@
-jecode.org rassemble des portraits de programmeurs passionnés, des initiatives encourageant l'apprentissage de la programmation, et des écoles qui s'intéressent à l'enseignement de l'informatique.
+<div class="jumbotron">
+<p>jecode.org rassemble des portraits de programmeurs passionnés, des initiatives encourageant l'apprentissage de la programmation, et des écoles qui s'intéressent à l'enseignement de l'informatique.</p>
+</div>
