Reformulation du message principal.
Mise en avant du fait que les initiatives s'adressent d'abord à des enfants.

--- a/resources/public/md/description
+++ b/resources/public/md/description
@@ -1,3 +1,5 @@
 <div class="jumbotron">
-<p>Le site jecode.org rassemble des portraits de programmeurs passionnés, des initiatives encourageant l'apprentissage de la programmation, et des écoles qui s'intéressent à l'enseignement de l'informatique.</p>
+<p>
+Le site jecode.org rassemble des initiatives encourageant l'apprentissage de la programmation pour les <strong>enfants</strong>.  Nous construisons une carte des initiatives et une carte des événements qu'elles organisent, toutes deux accessibles au grand public et aux écoles qui souhaitent s'ouvrir à cet enseignement.
+</p>
 </div>
